--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -39,3 +39,30 @@ form {
 /* .btn {
   padding: 0.5rem 2rem;
 } */
+
+
+.results {
+
+ /* border: solid tomato; */
+ width: 70%;
+  margin: 3rem auto;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
+
+}
+
+.card {
+box-shadow: 0px 2px 5px #0000003b;
+  /* border: solid tomato; */
+  margin-top: 1rem;
+  
+ 
+
+}
+
+.card-img-top {
+
+width: 25rem;
+
+}
