--- a/src/components/CSS/Header.css
+++ b/src/components/CSS/Header.css
@@ -5,8 +5,34 @@ filter: invert(1);
 border-radius: 65px;
 }
 
+.TV {
+
+/* border: solid tomato; */
+width: 80%;
+margin: 0 auto;
+display: flex;
+align-items: center;
+}
+
 .btn {
 
 padding: 0.5rem 1rem;
+
+}
+
+
+
+.navbar{
+
+background-color: white;
+/* border: tomato solid; */
+}
+
+
+.me-auto {
+
+/* border: tomato solid; */
+margin-top: 0.8rem;
+margin-left: 1rem;
 
 }
