--- a/src/components/CSS/Header.css
+++ b/src/components/CSS/Header.css
@@ -36,3 +36,20 @@ margin-top: 0.8rem;
 margin-left: 1rem;
 
 }
+
+.carousel span {
+
+z-index: 10;
+font-weight: bolder;
+user-select: none;
+
+} 
+
+
+.carousel-indicators button {
+
+color: transparent;
+
+}
+
+
