--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -54,7 +54,7 @@ form {
  /* border: solid tomato; */
  width: 70%;
  height: 70vh;
- overflow: auto;
+ /* overflow: auto; */
   margin: 3rem auto;
 display: flex;
 flex-wrap: wrap;
@@ -74,5 +74,15 @@ box-shadow: 0px 2px 5px #0000003b;
 .card-img-top {
 
 width: 25rem;
+
+}
+
+
+.cardImage {
+
+width: 500px;
+height: 300px;
+background-size: cover;
+background-position-x: center;
 
 }
