--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   width: 100%;
-  height: 100vh;
+  height: fit-content;
   /* border: solid red; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
