--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -39,50 +39,39 @@ form {
   background-color: transparent;
 }
 
-
 .form-control: {
-  
   background-color: transparent;
 }
 /* .btn {
   padding: 0.5rem 2rem;
 } */
 
-
 .results {
-
- /* border: solid tomato; */
- width: 70%;
- height: 70vh;
- /* overflow: auto; */
+  /* border: solid tomato; */
+  width: 80%;
+  height: 70vh;
+  /* overflow: auto; */
   margin: 3rem auto;
-display: flex;
-flex-wrap: wrap;
-justify-content: space-evenly;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
 }
 
 .card {
-box-shadow: 0px 2px 5px #0000003b;
+  box-shadow: 0px 2px 5px #0000003b;
   /* border: solid tomato; */
   margin-top: 1rem;
-  
- 
-
+  padding: 1rem;
+  text-align: center;
 }
 
-.card-img-top {
-
-width: 25rem;
-
-}
 
 
 .cardImage {
-
-width: 500px;
-height: 300px;
-background-size: cover;
-background-position-x: center;
-
+  width: 300px;
+  height: 300px;
+  background-size:cover;
+  background-position-x: center;
+  /* border: solid tomato; */
+ 
 }
