--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
 nav .btn {
   margin-right: 1rem;
 }
@@ -7,15 +9,46 @@ img {
 }
 
 .cover {
+  margin-top: -5rem;
   width: 100%;
+  height: 500px;
+  background-image: url(https://www.cristianmg.com/wp-content/uploads/CRAZY.gif);
+  
+  /* https://www.cristianmg.com/wp-content/uploads/CRAZY.gif */ 
+  background-size: cover;
+  background-position-y: center;
   /* background-color: #911F27; */
-  position: absolute;
+  /* position: absolute; */
+  /* position: relative; */
 }
 
+.carousel  {
+color: white;
+ /* border: solid tomato; */
+ margin-top: 5rem;
+ font-size: 2.7pc;
+ padding: 3rem 0rem;
+ word-spacing: 0.3rem;
+}
+
+.carousel span  {
+  text-shadow: 0px 3px 5px #0000005e;
+  font-family: 'Staatliches', cursive;
+  letter-spacing: 0.1rem;
+  }
+
+.carousel-control-next, .carousel-control-prev, .carousel-indicators {
+
+display:none ;
+
+}
+
+
 form {
+  
   /* border: solid tomato; */
   width: 70%;
-  margin: 5rem auto;
+  margin: 7rem auto;
   display: flex;
   justify-content: space-between;
   padding: 0.5rem;
@@ -46,10 +79,13 @@ form {
   padding: 0.5rem 2rem;
 } */
 
+
+
+
 .results {
   /* border: solid tomato; */
   width: 80%;
-  height: 70vh;
+  /* height: 70vh; */
   /* overflow: auto; */
   margin: 3rem auto;
   display: flex;
@@ -57,8 +93,11 @@ form {
   justify-content: space-evenly;
 }
 
+
+
+
 .card {
-  box-shadow: 0px 2px 5px #0000003b;
+  box-shadow: 0px 2px 5px hsla(0, 0%, 0%, 0.336);
   /* border: solid tomato; */
   margin-top: 1rem;
   padding: 1rem;
@@ -68,10 +107,35 @@ form {
 
 
 .cardImage {
-  width: 300px;
+  border-radius: 10px;
+  width: 100%;
   height: 300px;
   background-size:cover;
   background-position-x: center;
   /* border: solid tomato; */
+
  
 }
+
+
+
+
+
+iframe {
+padding: 1rem;
+width: 100%;
+height: 600px;
+border-radius: 30px;
+}
+
+
+
+
+.my-modal {
+  border-radius: 50px;
+  width: 80vw; 
+  height: 100%;   
+  max-width: 80vw;
+  
+  /* border: solid tomato; */
+} 
