--- a/src/components/CSS/profile.css
+++ b/src/components/CSS/profile.css
@@ -13,9 +13,30 @@
   width: 250px;
 }
 .err p {
-/* margin-left: 1rem; */
-font-family: sans-serif;
-font-weight: bolder;
-font-size: 1.5pc;
+  /* margin-left: 1rem; */
+  font-family: sans-serif;
+  font-weight: bolder;
+  font-size: 1.5pc;
+}
 
+.info {
+  /* border: solid tomato; */
+  width: 70%;
+  margin: 5rem auto;
+  height: 578px;
+}
+
+.info h2 {
+  /* border: solid tomato; */
+  display: inline;
+  font-family: sans-serif;
+  color: hsla(0, 0%, 0%, 0.548);
+  margin-left: 2rem;
+  font-size: 1.8pc;
+}
+
+.userProfileImg {
+  width: 150px;
+  border-radius: 75px;
+  box-shadow: 0px 3px 7px lightgray;
 }
