create function in profile

--- a/src/components/CSS/Footer.css
+++ b/src/components/CSS/Footer.css
@@ -1,12 +1,14 @@
 .footer {
+/* border: tomato solid; */
+position: static;
 
-
+/* width: 100%; */
 }
 
 
 .FTV   {
 
-    
+    /* border: tomato solid; */
     
     }
 
