--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
   width: 100%;
-  height: 100vh;
+  
   /* border: solid red; */
+  /* overflow: auto; */
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
