--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -90,7 +90,8 @@ img {
   background-color: white;
   border-radius: 15px;
   box-shadow: 0px 2px 7px hsla(0, 0%, 0%, 0.288);
-  padding: 1rem 2rem;
+  padding: 0rem 1.5rem;
+  padding-bottom: 1rem;
 }
 
 
@@ -104,14 +105,23 @@ margin: 0rem auto;
 }
 
 .card {
-  box-shadow: 0px 2px 5px hsla(0, 0%, 0%, 0.336);
+  /* box-shadow: 0px 2px 5px hsla(0, 0%, 0%, 0.336); */
   /* border: solid tomato; */
   margin-top: 1.5rem;
   padding: 1rem;
   text-align: center;
   border-radius: 10px;
-  background-color: hsla(0, 0%, 83%, 0.425);
+  border-style: none;
+  /* background-color: hsl(230, 62%, 53%); */
+  /* border-bottom: solid #0000009c 0.1px ; */
+ transition: 0.2s;
 }
+
+.card:hover  {
+
+  
+}
+
 
 .cardImage {
   border-radius: 10px;
@@ -120,7 +130,12 @@ margin: 0rem auto;
   background-size: cover;
   background-position-x: center;
   /* border: solid tomato; */
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
+  transition: 0.2s;
 }
+
+
+
 
 iframe {
   padding: 1rem;
