--- a/src/components/CSS/profile.css
+++ b/src/components/CSS/profile.css
@@ -1,6 +1,3 @@
-
-
-
 .err {
   padding: 10rem;
   /* border: tomato solid; */
@@ -45,47 +42,49 @@
   box-shadow: 0px 3px 7px #00000067;
 }
 
-
-
 .folders {
-width: 70%;
-margin: 0rem auto;
-/* border: solid rgb(31, 29, 29); */
-display: flex;
-justify-content: space-around;
-text-align: center;
-
+  width: 70%;
+  margin: 0rem auto;
+  /* border: solid rgb(31, 29, 29); */
+  display: flex;
+  /* justify-content: space-around; */
+  text-align: center;
+  flex-wrap: wrap;
 }
 
-.folders input[type=submit] {
+.folders form {
+  border: solid #fee341;
 
-border: solid tomato;
-
-background-color: transparent;
-border-style: none;
-
+  display: flex;
+  flex-direction: column;
 }
 
+.folders input[type="submit"] {
+  /* border: solid tomato; */
+
+  background-color: transparent;
+  border-style: none;
+  color: hsl(9, 98%, 55%);
+}
 
 .one-model {
-  width: 75%;
-  height: 500px;
+  width: 70%;
+  height: 550px;
+  overflow: auto;
   margin: 1.5rem auto;
   /* border: solid rgb(31, 29, 29); */
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   text-align: center;
-
+  flex-wrap: wrap;
+  padding: 2rem 0rem;
 }
 
-
 .one-model .card {
-
+  margin-left: 1rem;
   /* border: solid tomato; */
-  width: 17rem;
-  height: 17rem;
+  width: 15rem;
+  height: 15rem;
   /* padding: 2rem; */
-  
-
 }
