--- a/src/components/CSS/aboutus.css
+++ b/src/components/CSS/aboutus.css
@@ -4,6 +4,9 @@
 width: 100%;
 height: 100%;
 background-color: white;
+/* padding-bottom: 2rem; */
+/* position: absolute; */
+box-shadow: 0px 10rem 0px white;
 
 }
 
@@ -41,9 +44,30 @@ background-color: white;
     height: 80%;
   }
   .pa {
-    font-size: 4.8vh;
+    font-size: 1.8pc;
     display: block;
     text-align: center;
     height: 10vh;
     line-height: 2.6;
+    margin-top: 1rem;
+    color: tomato;
+  }
+
+.idk {
+width: 70%;
+  /* border: solid tomato; */
+  margin:0 auto;
+  padding-top: 5rem;
+  text-align: center;
+  font-size: 2pc;
+  /* font-family: sans-serif; */
+}
+
+
+  .brie {
+
+
+
+/* border: solid tomato; */
+
   }
