--- a/src/components/CSS/profile.css
+++ b/src/components/CSS/profile.css
@@ -1,5 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@600&display=swap');
+
+.gene {
+
+
+  background-color: white;
+  box-shadow: 0px 10rem  0px   white,
+  0px -10rem  0px   white
+  ;
+}
+
+
 .err {
-  padding: 10rem;
+  padding: 6rem;
   /* border: tomato solid; */
   width: fit-content;
   margin: 3rem auto;
@@ -43,6 +55,9 @@
 }
 
 .folders {
+padding: 0.7rem ;
+  border-radius: 10px;
+  box-shadow: 0px 4px 6px hsla(0, 0%, 0%, 0.219);
   width: 70%;
   margin: 0rem auto;
   /* border: solid rgb(31, 29, 29); */
@@ -50,10 +65,11 @@
   /* justify-content: space-around; */
   text-align: center;
   flex-wrap: wrap;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 .folders form {
-  border: solid #fee341;
+  border: solid #ffffff;
 
   display: flex;
   flex-direction: column;
@@ -64,7 +80,7 @@
 
   background-color: transparent;
   border-style: none;
-  color: hsl(9, 98%, 55%);
+  
 }
 
 .one-model {
@@ -87,4 +103,102 @@
   width: 15rem;
   height: 15rem;
   /* padding: 2rem; */
+ 
+  background-color: transparent;
 }
+
+.one-model .card button {
+
+width: 5rem;
+margin: 0 auto;
+
+}
+
+
+iframe {
+  padding: 1rem;
+  width: 100%;
+  height: 74vh;
+  border-radius: 30px;
+}
+
+.my-modal {
+  width: 80vw;
+  height: fit-content;
+  max-width: 80vw;
+/* padding-bottom: 1rem; */
+  /* border: solid tomato; */
+}
+
+.my-modal .modal-content {
+  border-radius: 15px;
+  padding-bottom: 1rem;
+}
+
+.my-modal .modal-content .modal-title {
+  margin-top: 0.75rem;
+  font-family: sans-serif;
+  text-align: center;
+}
+
+.my-modal button {
+
+/* border: solid blue; */
+width: 5rem;
+margin: 0 auto;
+
+}
+
+
+
+
+.form-container{
+  margin: 0 auto;
+width: 70%;
+/* border: solid green; */
+height: 7rem;
+position: relative;
+}
+
+.form2 {
+/* position: absolute; */
+/* border: solid blue; */
+/* float: left; */
+/* width: 100%; */
+margin: 0 auto;
+/* display: flex; */
+
+padding: 0;
+}
+
+.form2 input {
+height: 3rem;
+width: 15rem;
+position: absolute;
+right: 7rem;
+box-shadow: 0px 2px 5px #0000004d;
+}
+
+.form2 button {
+  height: 3rem;
+  width: 5rem;
+  position: absolute;
+  right: 0rem;
+  top: 0.1px;
+  box-shadow: 0px 2px 5px #0000004d;
+  }
+
+
+.form2 input:focus {
+  height: 3rem;
+  width: 15rem;
+  background-color: white;
+  box-shadow: 0px 2px 5px #0000004d;
+  }
+
+  .form2 input:active {
+    height: 3rem;
+    width: 15rem;
+    background-color: white;
+    box-shadow: 0px 2px 5px #0000004d;
+    }
