--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -94,14 +94,9 @@ img {
   padding-bottom: 1rem;
 }
 
-
 .showBtn {
-
-
-width: 5rem;
-margin: 0rem auto;
-
-
+  width: 5rem;
+  margin: 0rem auto;
 }
 
 .card {
@@ -114,14 +109,11 @@ margin: 0rem auto;
   border-style: none;
   /* background-color: hsl(230, 62%, 53%); */
   /* border-bottom: solid #0000009c 0.1px ; */
- transition: 0.2s;
+  transition: 0.2s;
 }
 
-.card:hover  {
-
-  
+.card:hover {
 }
-
 
 .cardImage {
   border-radius: 10px;
@@ -133,9 +125,6 @@ margin: 0rem auto;
   box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.5);
   transition: 0.2s;
 }
-
-
-
 
 iframe {
   padding: 1rem;
@@ -184,35 +173,26 @@ iframe {
 }
 
 .form1 .form-select:focus {
- box-shadow: none;
-  }
-
-  .form1 .form-select:active {
-    box-shadow: none;
-    }
-
-
-.accordion-button:hover {
-
   box-shadow: none;
-
 }
 
+.form1 .form-select:active {
+  box-shadow: none;
+}
+
+.accordion-button:hover {
+  box-shadow: none;
+}
 
 .accordion-button:active {
-
   box-shadow: none;
   background-color: white;
-
 }
 
 .accordion-button:focus {
-
   box-shadow: none;
   background-color: white;
-
 }
-
 
 .form3 {
   /* border: tomato solid; */
@@ -221,9 +201,8 @@ iframe {
   margin-top: 1.5rem;
   text-align: center;
   /* height: 5rem; */
- position: relative;
+  position: relative;
 }
-
 
 .form3 input {
   height: 3.2rem;
@@ -232,52 +211,42 @@ iframe {
   right: 0rem;
   /* box-shadow: 0px 2px 5px #0000004d; */
   border: #0000003b solid 0.1px;
-  }
-  
-  .form3 button {
-    
-position: absolute;
-top: 4.1rem;
-    }
-  
-  
-  .form3 input:focus {
-    height: 3.2rem;
-    width: 15rem;
-    background-color: white;
-    /* box-shadow: 0px 2px 5px #0000004d; */
-    border: #0000003b solid 0.1px;
-    }
-  
-    .form3 input:active {
-      height: 3.2rem;
-      width: 15rem;
-      background-color: white;
-      /* box-shadow: 0px 2px 5px #0000004d; */
-      border: #0000003b solid 0.1px;
-      }
+}
 
+.form3 button {
+  position: absolute;
+  top: 4.1rem;
+}
 
+.form3 input:focus {
+  height: 3.2rem;
+  width: 15rem;
+  background-color: white;
+  /* box-shadow: 0px 2px 5px #0000004d; */
+  border: #0000003b solid 0.1px;
+}
 
-
-
+.form3 input:active {
+  height: 3.2rem;
+  width: 15rem;
+  background-color: white;
+  /* box-shadow: 0px 2px 5px #0000004d; */
+  border: #0000003b solid 0.1px;
+}
 
 .close {
   margin: 7rem auto;
   width: 7rem;
   /* border: rgb(245, 245, 245) solid 4px; */
- 
 }
 
 .warn {
   /* border: tomato solid; */
   width: 10rem;
-  
+
   margin: 1rem auto;
   position: relative;
   height: 5rem;
-  
-  
 }
 
 .warn button {
@@ -294,47 +263,51 @@ top: 4.1rem;
   color: tomato;
 }
 
-
-
 ::-webkit-scrollbar {
   width: 10px;
   transition: 0.5s;
-  
 }
-
-
 
 /* Track */
 ::-webkit-scrollbar-track {
-  background: #f1f1f1; 
+  background: #f1f1f1;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: rgba(182, 20, 33, 0.87); 
+  background: rgba(182, 20, 33, 0.87);
   transition: 0.5s;
 }
 
-
 ::-webkit-scrollbar-thumb:hover {
-  background: rgba(182, 20, 33, 0.87); 
-  
+  background: rgba(182, 20, 33, 0.87);
 }
-
 
 /* Handle on hover */
 
-
-
 .hvrEfct {
-
   transition: 0.1s;
 }
 
-
-
 .hvrEfct:hover {
-
   border-bottom: 2px solid rgba(182, 20, 33, 0.87);
+}
 
+.btn {
+  transition: 0.3s;
+  /* background-color: #2DA9E1; */
+  border-style: none;
+}
+
+.btn:hover {
+  transform: scale(105%);
+}
+
+.btn:active {
+  transform: scale(95%);
+  box-shadow: unset;
+}
+
+.btn:focus {
+  box-shadow: unset;
 }
