--- a/src/components/CSS/Footer.css
+++ b/src/components/CSS/Footer.css
@@ -9,14 +9,33 @@ margin-top: 2rem;
 .FTV   {
 
     /* border: tomato solid; */
-    
+    display: flex;
+    justify-content: space-between;
+
     }
 
-.FTV  ul li {
 
-float: right;
-margin-left: 1rem;
-margin-top: 1.9rem;
+
+
+.conti{
+
+/* border: tomato solid; */
+/* width: 60%; */
+/* margin: 0 auto; */
+color: white;
+/* position: relative; */
+/* margin-left: 10rem; */
 
 }
 
+.rights { 
+
+/* margin-right: 12rem; */
+}
+
+
+.conti ul  {
+/* position: absolute; */
+/* list-style: none; */
+/* top: -4rem; */
+}
