--- a/src/components/CSS/mainPage.css
+++ b/src/components/CSS/mainPage.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Teko:wght@600&display=swap");
 nav .btn {
   margin-right: 1rem;
 }
@@ -46,7 +46,7 @@ img {
 
 .form0 {
   /* border: solid tomato; */
-  width: 70%;
+  width: 55%;
   margin: -2rem auto;
   display: flex;
   justify-content: space-between;
@@ -95,7 +95,7 @@ img {
 }
 
 .showBtn {
-  width: 5rem;
+  width: 6.5rem;
   margin: 0rem auto;
 }
 
@@ -105,18 +105,22 @@ img {
   margin-top: 1.5rem;
   padding: 1rem;
   text-align: center;
-  border-radius: 10px;
+  border-radius: 2px;
   border-style: none;
   /* background-color: hsl(230, 62%, 53%); */
   /* border-bottom: solid #0000009c 0.1px ; */
   transition: 0.2s;
+  font-family: "Teko", sans-serif;
+  font-size: 1.7pc;
+  font-weight: lighter;
+  letter-spacing: 0.1px;
 }
 
 .card:hover {
 }
 
 .cardImage {
-  border-radius: 10px;
+  border-radius: 2px;
   width: 100%;
   height: 300px;
   background-size: cover;
@@ -129,14 +133,14 @@ img {
 iframe {
   padding: 1rem;
   width: 100%;
-  height: 74vh;
+  height: 70vh;
   border-radius: 30px;
 }
 
 .my-modal {
-  width: 80vw;
+  width: 70vw;
   height: fit-content;
-  max-width: 80vw;
+  max-width: 70vw;
 
   /* border: solid tomato; */
 }
@@ -145,10 +149,14 @@ iframe {
   border-radius: 15px;
 }
 
-.my-modal .modal-content .modal-title {
+.titleyee {
   margin-top: 0.75rem;
-  font-family: sans-serif;
+
   text-align: center;
+  font-family: "Teko", sans-serif;
+  font-size: 2.5pc;
+  letter-spacing: 0.1px;
+  /* border: solid red; */
 }
 
 .accordion-body {
@@ -157,19 +165,38 @@ iframe {
 
 .acoElm {
   /* border: solid tomato; */
-  width: 50vw;
+  width: 70vw;
   margin: 0 auto;
-  height: 9rem;
+  height: 10rem;
+  position: relative;
+  
 }
 
 .form1 {
-  border: tomato solid;
-  float: left;
-  width: 20rem;
+  /* border: tomato solid; */
+  position: absolute;
+  left: 0%;
+  width: 28rem;
   margin-top: 1rem;
   text-align: center;
-  border-style: none;
-  border-color: white;
+  /* border-style: none; */
+  /* border-color: white; */
+  display: flex;
+  /* justify-content: space-between; */
+  flex-direction: column;
+}
+
+.form1 .form-select {
+  width: 20rem;
+  height: 4rem;
+}
+
+.form1 button {
+  position: absolute;
+  height: 3rem;
+  right: 15rem;
+  top: 4.5rem;
+
 }
 
 .form1 .form-select:focus {
@@ -182,63 +209,62 @@ iframe {
 
 .accordion-button:hover {
   box-shadow: none;
+  background-color: transparent;
 }
 
 .accordion-button:active {
   box-shadow: none;
-  background-color: white;
+  background-color: transparent;
 }
 
 .accordion-button:focus {
   box-shadow: none;
-  background-color: white;
+  background-color: transparent;
 }
+
+
+
+
+
 
 .form3 {
-  /* border: tomato solid; */
-  float: right;
-  width: 20rem;
-  margin-top: 1.5rem;
+  /* border: hsla(0, 0%, 0%, 0.178) solid 0.1px; */
+  position: absolute;
+  right: -8rem;
+  width: 30rem;
+  margin-top: 1rem;
   text-align: center;
-  /* height: 5rem; */
-  position: relative;
+  /* border-style: none; */
+  /* border-color: white; */
+  display: flex;
+  /* justify-content: space-between; */
+  border-radius: 5px;
 }
 
-.form3 input {
-  height: 3.2rem;
-  width: 15rem;
-  position: absolute;
-  right: 0rem;
-  /* box-shadow: 0px 2px 5px #0000004d; */
-  border: #0000003b solid 0.1px;
+.form3 .form-control {
+  width: 23.5rem;
+  height: 4rem;
+   border: hsla(0, 0%, 0%, 0.178) solid 0.1px;
 }
 
 .form3 button {
-  position: absolute;
-  top: 4.1rem;
+  height: 3rem;
+    /* border: tomato solid; */
+    position: absolute;
+    right: 0;
+    top: 4.5rem;
+    right: 15rem;
 }
 
 .form3 input:focus {
-  height: 3.2rem;
-  width: 15rem;
-  background-color: white;
-  /* box-shadow: 0px 2px 5px #0000004d; */
-  border: #0000003b solid 0.1px;
+  box-shadow: none;
 }
 
 .form3 input:active {
-  height: 3.2rem;
-  width: 15rem;
-  background-color: white;
-  /* box-shadow: 0px 2px 5px #0000004d; */
-  border: #0000003b solid 0.1px;
+  box-shadow: none;
 }
 
-.close {
-  margin: 7rem auto;
-  width: 7rem;
-  /* border: rgb(245, 245, 245) solid 4px; */
-}
+
 
 .warn {
   /* border: tomato solid; */
